# CalorieAdvisorProject

./: .env  calorie_cal.py  main.py  package-lock.json  package.json  pyproject.toml
app/: layout.tsx  page.tsx
app/home/: page.tsx
app/login/: page.tsx
