[tool.poetry]
name = "calorie-advisor"
version = "0.1.0"
description = ""
authors = ["masfana016 <masfanasrullahansari123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain-google-genai = "^2.0.1"
langchain = "^0.3.4"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
langchain-community = "^0.3.3"
passio-nutrition-ai = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
